Fixed spacing on context/history timeline

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ h3{
   margin-right:0;
 }
 
+
 .history-circle{
   height:100px;
   width:100px;
@@ -28,8 +29,13 @@ h3{
   font-weight: bold;
 }
 
+.history-desc {
+  display:inline-block;
+  width:80%;
+}
+
 .history-group{
-  margin-bottom:50px;
+  margin-bottom:20px;
 }
 
 
